Fixed an issue where too many SampleData evaluation windows were being produced for By Forecast evaluations and fixed an issue where By Forecast pairs were removing right hand values. refs #61628, #61627